--- a/lesson 12/css/style.css
+++ b/lesson 12/css/style.css
@@ -16,5 +16,39 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;}
 /* ------------------- */
 body{
-   padding: 30px;
+   padding: 100px;
+   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.block {
+   border: 5px solid red;
+   max-width: 800px;
+   margin: 0 auto;
+   height: 1800px;
+   position: relative;
+}
+.block div{
+   line-height: 100px;
+   font-size: 18px;
+   font-weight: 700;
+   text-align: center; 
+}
+.block_1{
+   background-color: rgb(187, 32, 66);
+}
+.block_2{
+   background-color: rgb(159, 245, 46);
+   position: static;
+}
+.block_3{
+   background-color: rgb(59, 46, 248);
+   color: #fff;
+}
+.block_4{
+   background-color: rgb(97, 102, 91);
+   position: static;
+   color: #fff;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
 }
